[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["oleHxOleksuk <108345191+oleHxOleksuk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
